websrv-ingress/traefik-ing-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik-ing
