websrv-ingress/websrv-main.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websrv-main
  labels: 
    app: websrv-main
# namespace: websrv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websrv-main
  template:
    metadata:
      labels:
        app: websrv-main
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-home
          mountPath: /etc/nginx/
          readOnly: true
        - name: homepage
          mountPath: /usr/share/nginx/html/
      volumes:
      - name: config-home
        configMap:
          name: websrv-config-home
      - name: homepage
        configMap:
          name: websrv-homepage
