websrv-ingress/websrv-s1.yaml
apiVersion: v1
kind: Service
metadata: 
  name: websrv-s1
#  namespace: websrv
spec:
  selector:
    app: websrv-s1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websrv-s1
  labels: 
    app: websrv-s1
#  namespace: websrv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websrv-s1
  template:
    metadata:
      labels:
        app: websrv-s1
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-s1
          mountPath: /etc/nginx/
          readOnly: true
        - name: s1
          mountPath: /usr/share/nginx/html/s1/
      volumes:
        - name: config-s1
          configMap:
            name: websrv-config-s1
        - name: s1
          configMap:
            name: websrv-page-s1
