websrv-ingress/websrv-s2.yaml
apiVersion: v1
kind: Service
metadata: 
  name: websrv-s2
#  namespace: websrv
spec:
  selector:
    app: websrv-s2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websrv-s2
  labels: 
    app: websrv-s2
#  namespace: websrv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websrv-s2
  template:
    metadata:
      labels:
        app: websrv-s2
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-s2
          mountPath: /etc/nginx/
          readOnly: true
        - name: s2
          mountPath: /usr/share/nginx/html/s2/
      volumes:
        - name: config-s2
          configMap:
            name: websrv-config-s2
        - name: s2
          configMap:
            name: websrv-page-s2
